--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+
+<!-- language tag -->
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -33,7 +35,9 @@
 
 
 
+    <!-- ADDING A COMMENT TO an .html file -->
 
+    <!-- we use this line below to connecto to the app.js file -->
     <script src="app.js" defer></script>
 </body>
 
